build/kohaku_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:625593260641:certificate/7e83430a-f771-4087-bce5-39162c2abb32
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    external-dns.alpha.kubernetes.io/hostname: testnet.koii.live 
    kubernetes.io/ingress.class: alb
  name: kohaku-koi-node-service-1
spec:
  rules:
  - host: testnet.koii.live
    http:
      paths:
      - backend:
          serviceName: kohaku-koi-node-service-1
          servicePort: 8080
